--- a/package.json
+++ b/package.json
@@ -16,12 +16,14 @@
     "test.watch": "jest --watch"
   },
   "dependencies": {
-    "leaflet": "^1.3.4"
+    "leaflet": "^1.3.4",
+    "esri-leaflet": "^2.2.3"
   },
   "devDependencies": {
     "@stencil/core": "0.12.4",
     "@types/jest": "^23.3.1",
     "@types/leaflet": "^1.2.11",
+    "@types/esri-leaflet": "^2.1.4",
     "jest": "^23.4.2"
   },
   "author": "Moduscreate",
